<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracetools</name>
  <version>8.2.0</version>
  <description>Tracing wrapper for ROS 2.</description>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://docs.ros.org/en/rolling/p/tracetools/</url>
  <url type="repository">https://github.com/ros2/ros2_tracing</url>
  <url type="bugtracker">https://github.com/ros2/ros2_tracing/issues</url>
  <author email="ingo.luetkebohle@de.bosch.com">Ingo Lütkebohle</author>
  <author email="fixed-term.christophe.bourquebedard@de.bosch.com">Christophe Bedard</author>

  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <!-- >=2.11.1 -->
  <depend>liblttng-ust-dev</depend>

  <exec_depend>lttng-tools</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
