<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tracetools_test</name>
  <version>0.0.1</version>
  <description>Separate test package for tracetools</description>
  <author email="bedard.christophe@gmail.com">Christophe Bedard</author>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>tracetools_trace</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
